<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB_Move" Id="{f9a99ade-b4af-4565-bffe-bba1640e411e}" SpecialFunc="None">
    <Declaration><![CDATA[(****************************************************************
NAME:			FB_Move
DATA:			2017.2.17
VERSION:		1.0.0
DESCRIPTION:	FB_Move
HISTORY:
				2017.2.17		NEW
				2018.1.9		ÐÂÔöBCGapMode
***************************************************************)
FUNCTION_BLOCK FB_Move
VAR_INPUT
	(*È«¾Ö*)
	Mode:DINT;
	PowerState:BOOL;
	(*BCGapMode*)
	TargetGapPosition:LREAL;
	TargetGapVelocity:LREAL;
	BCGapMove:BOOL;
	BCGapReset:BOOL;
END_VAR
VAR_OUTPUT
	FbID:DINT:=1001;

	BCGapState:DINT;
	BCGapBusy:BOOL;
	BCGapDone:BOOL;
	GapMoving:BOOL;
	Error:BOOL;
	ErrorID:DINT;
END_VAR
VAR
	PhaseShifterLin_MC_MoveAbsolute: MC_MoveAbsolute;
	fb_ton: TON;
	fb_ton1: TON;
	fb_ton2: TON;
	fb_ton_debug_1:TON;
	fb_ton_debug_2:TON;
	fb_ton_debug_3:TON;
	fb_ton_debug_4:TON;
	fb_ton_BC:TON;
	fb_ton_BC_2:TON;
	
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF PowerState=1 THEN
	IF Mode=1 AND BCGapMove THEN
		A_BCGapMove();
	END_IF
END_IF]]></ST>
    </Implementation>
    <Action Name="A_BCGapMove" Id="{14a23b8d-1d11-4027-a881-ef621e956d3f}">
      <Implementation>
        <ST><![CDATA[IF BCGapMove THEN
BCGapBusy:=TRUE;
BCGapDone:=FALSE;
fb_ton_BC(PT:=t#80s);(*2mm/s max spees,120mmÐÐ³Ì£¬60sÄÚ×ßÍê*)
A_MoveMC();
IF  PhaseShifterLin.Status.Moving  THEN
	GapMoving:=TRUE;
ELSE
	GapMoving:=FALSE;
END_IF
CASE BCGapState OF
	0:
		IF PhaseShifterLin.Status.Moving THEN	(*ÖáÕýÔÚÔËÐÐ£¬Ñ­»·¸Ã²½µÈ´ý*)
			BCGapState:=88;
		ELSIF PhaseShifterLin_MC_MoveAbsolute.Error THEN	(*¼ì²éMC Error*)
			ErrorID:=2;
			BCGapState:=99;
		(*ELSIF ABS(Pos_LeftTopLin-GapPosition/2)<0.002 AND  ABS(Pos_LeftBottomLin-GapPosition)<0.002 THEN	(*Ä¿±êÎ»ÖÃÓëµ±Ç°Î»ÖÃÒ»Ñù£¬²»¶¯*)
			GapState:=88;*)
		ELSIF PhaseShifterLin.Status.NotMoving THEN	(*Öá¶¼´¦ÓÚÍ£Ö¹×´Ì¬Ê±£¬×ªÏÂÒ»²½*)
			BCGapState:=1;
		END_IF
	1:
		PhaseShifterLin_MC_MoveAbsolute.Position:=TargetGapPosition;
		PhaseShifterLin_MC_MoveAbsolute.Velocity:=TargetGapVelocity;
		PhaseShifterLin_MC_MoveAbsolute.Execute:=TRUE;
		fb_ton_BC.IN:=TRUE;
		BCGapState:=2;
	2:
		IF NOT PhaseShifterLin_MC_MoveAbsolute.Done THEN		(*ÔË¶¯ÖÐ£¬¼ì²éDoneÐÅºÅ£¬Ã»ÓÐÔòÑ­»·*)
			BCGapState:=2;
		ELSIF PhaseShifterLin_MC_MoveAbsolute.Done THEN		(*ÔË¶¯Íê³É£¬×ªÏÂÒ»²½*)
			BCGapState:=88;
		END_IF
		(*½ÓÊÕµ½stopÐÅºÅÊ±£¬reset×´Ì¬*)
		IF BCGapReset THEN
			BCGapState:=89;
		END_IF

	88:
		BCGapMove:=FALSE;
		BCGapState:=0;
		BCGapBusy:=FALSE;
		BCGapDone:=TRUE;
		Error:=FALSE;
		ErrorID:=0;
		PhaseShifterLin_MC_MoveAbsolute.Execute:=FALSE;
		fb_ton_BC.IN:=FALSE;
	89:
		BCGapMove:=FALSE;
		BCGapState:=0;
		BCGapBusy:=FALSE;
		BCGapDone:=FALSE;
		Error:=FALSE;
		ErrorID:=0;
		PhaseShifterLin_MC_MoveAbsolute.Execute:=FALSE;
		fb_ton_BC.IN:=FALSE;
	99:
		BCGapMove:=FALSE;
		BCGapState:=99;
		BCGapBusy:=FALSE;
		BCGapDone:=FALSE;
		Error:=TRUE;
		PhaseShifterLin_MC_MoveAbsolute.Execute:=FALSE;
		fb_ton_BC.IN:=FALSE;
	-100:
		FB_PlcEmergencyStop();
		BCGapMove:=FALSE;
		BCGapState:=-100;
		BCGapBusy:=FALSE;
		BCGapDone:=FALSE;
		Error:=TRUE;
		PhaseShifterLin_MC_MoveAbsolute.Execute:=FALSE;
		fb_ton_BC.IN:=FALSE;
END_CASE
END_IF]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_MoveMC" Id="{f577884c-c19e-4448-8f5c-62de64b66e2f}">
      <Implementation>
        <NWL>
          <XmlArchive>
            <Data>
              <o xml:space="preserve" t="NWLImplementationObject">
                <v n="NetworkListComment">""</v>
                <v n="DefaultViewMode">"Fbd"</v>
                <l2 n="NetworkList" cet="Network">
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeBox">
                      <o>
                        <v n="BoxType">"MC_MoveAbsolute"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"PhaseShifterLin_MC_MoveAbsolute"</v>
                          <v n="Type">"MC_MoveAbsolute"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">2L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <n />
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">4L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">5L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">6L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">7L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">8L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">10L</v>
                            </o>
                            <v n="Id">9L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">12L</v>
                            </o>
                            <v n="Id">11L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">14L</v>
                            </o>
                            <v n="Id">13L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">16L</v>
                            </o>
                            <v n="Id">15L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">18L</v>
                            </o>
                            <v n="Id">17L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">20L</v>
                            </o>
                            <v n="Id">19L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">22L</v>
                            </o>
                            <v n="Id">21L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">24L</v>
                            </o>
                            <v n="Id">23L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"PhaseShifterLin"</v>
                              <v n="Type">"axis_ref"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">26L</v>
                            </o>
                            <v n="Id">25L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>Execute</v>
                            <v>Position</v>
                            <v>Velocity</v>
                            <v>Acceleration</v>
                            <v>Deceleration</v>
                            <v>Jerk</v>
                            <v>BufferMode</v>
                            <v>Options</v>
                            <v>Axis</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>LREAL</v>
                            <v>LREAL</v>
                            <v>LREAL</v>
                            <v>LREAL</v>
                            <v>LREAL</v>
                            <v>MC_BufferMode</v>
                            <v>ST_MoveOptions</v>
                            <v>AXIS_REF (VAR_IN_OUT)</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>Done</v>
                            <v>Busy</v>
                            <v>Active</v>
                            <v>CommandAborted</v>
                            <v>Error</v>
                            <v>ErrorID</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>UDINT</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <n n="EN" />
                        <n n="ENO" />
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">3L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">1L</v>
                  </o>
                </l2>
                <v n="BranchCounter">0</v>
                <v n="ValidIds">true</v>
              </o>
            </Data>
            <TypeList>
              <Type n="Boolean">System.Boolean</Type>
              <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
              <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
              <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
              <Type n="Int32">System.Int32</Type>
              <Type n="Int64">System.Int64</Type>
              <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
              <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
              <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
              <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
              <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
              <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
              <Type n="String">System.String</Type>
            </TypeList>
          </XmlArchive>
        </NWL>
      </Implementation>
    </Action>
    <LineIds Name="FB_Move">
      <LineId Id="120" Count="0" />
      <LineId Id="137" Count="1" />
      <LineId Id="140" Count="0" />
      <LineId Id="394" Count="0" />
    </LineIds>
    <LineIds Name="FB_Move.A_BCGapMove">
      <LineId Id="0" Count="3" />
      <LineId Id="10" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="105" Count="0" />
      <LineId Id="107" Count="1" />
      <LineId Id="106" Count="0" />
      <LineId Id="11" Count="2" />
      <LineId Id="15" Count="1" />
      <LineId Id="18" Count="4" />
      <LineId Id="24" Count="4" />
      <LineId Id="35" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="40" Count="2" />
      <LineId Id="44" Count="16" />
      <LineId Id="64" Count="7" />
      <LineId Id="75" Count="7" />
      <LineId Id="86" Count="8" />
      <LineId Id="98" Count="3" />
    </LineIds>
  </POU>
</TcPlcObject>