<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB_Power" Id="{d3a7443c-2919-46ae-a7ad-f8f713ca36af}" SpecialFunc="None">
    <Declaration><![CDATA[(****************************************************************
NAME:			FB_PowerOn
DATA:			2017.2.16
VERSION:		1.0.0
DESCRIPTION:	FB_PowerOn
HISTORY:
				2017.2.16		NEW

***************************************************************)
FUNCTION_BLOCK FB_Power
VAR_INPUT
	On:BOOL;
	Off:BOOL;
	Check:BOOL;
END_VAR
VAR_OUTPUT
	FbID:DINT:=1001;
	OnState:DINT;
	OffState: INT;
	OnBusy:BOOL;
	OffBusy:BOOL;
	OnStatus:BOOL;
	OffStatus: BOOL;
	Error:BOOL;
	ErrorID:DINT;
	PowerState:BOOL;
END_VAR
VAR
	PhaseShifterLin_MC_Power: MC_Power;
	fb_ton:TON;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*power on *)
IF On AND NOT Off THEN
	A_PowerOn();
(*Power Off *)
ELSIF Off AND NOT On THEN
	A_PowerOff();
END_IF
(*Check*)
IF Check THEN
	A_CheckPowerStatus();
END_IF]]></ST>
    </Implementation>
    <Action Name="A_CheckPowerStatus" Id="{45ab49c5-f74b-4ae0-bfbf-f6d250f649c1}">
      <Implementation>
        <ST><![CDATA[A_PowerMC();
IF  PhaseShifterLin_MC_Power.Status THEN
	PowerState:=1;
ELSIF NOT PhaseShifterLin_MC_Power.Status THEN
	PowerState:=0;
ELSE
	PowerState:=0;
	Error:=TRUE;
	ErrorID:=77;
	(*FB_PlcEmergencyStop();*)
END_IF]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_PowerMC" Id="{d3c8aed1-becd-49d1-b5d2-31e3edecaf6a}">
      <Implementation>
        <NWL>
          <XmlArchive>
            <Data>
              <o xml:space="preserve" t="NWLImplementationObject">
                <v n="NetworkListComment">""</v>
                <v n="DefaultViewMode">"Fbd"</v>
                <l2 n="NetworkList" cet="Network">
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeBox">
                      <o>
                        <v n="BoxType">"MC_Power"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"PhaseShifterLin_MC_Power"</v>
                          <v n="Type">"MC_Power"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">2L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <n />
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">4L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">5L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">6L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">7L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">9L</v>
                            </o>
                            <v n="Id">8L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"Unreach_LS_Far"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">11L</v>
                            </o>
                            <v n="Id">10L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"Unreach_LS_Near"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">13L</v>
                            </o>
                            <v n="Id">12L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">15L</v>
                            </o>
                            <v n="Id">14L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">17L</v>
                            </o>
                            <v n="Id">16L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"PhaseShifterLin"</v>
                              <v n="Type">"axis_ref"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">19L</v>
                            </o>
                            <v n="Id">18L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>Enable</v>
                            <v>Enable_Positive</v>
                            <v>Enable_Negative</v>
                            <v>Override</v>
                            <v>BufferMode</v>
                            <v>Axis</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>LREAL</v>
                            <v>MC_BufferMode</v>
                            <v>AXIS_REF (VAR_IN_OUT)</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>Status</v>
                            <v>Busy</v>
                            <v>Active</v>
                            <v>Error</v>
                            <v>ErrorID</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>UDINT</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <n n="EN" />
                        <n n="ENO" />
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">3L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">1L</v>
                  </o>
                </l2>
                <v n="BranchCounter">0</v>
                <v n="ValidIds">true</v>
              </o>
            </Data>
            <TypeList>
              <Type n="Boolean">System.Boolean</Type>
              <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
              <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
              <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
              <Type n="Int32">System.Int32</Type>
              <Type n="Int64">System.Int64</Type>
              <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
              <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
              <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
              <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
              <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
              <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
              <Type n="String">System.String</Type>
            </TypeList>
          </XmlArchive>
        </NWL>
      </Implementation>
    </Action>
    <Action Name="A_PowerOff" Id="{f8455d76-f208-4ad8-b331-bf9b4a5057da}">
      <Implementation>
        <ST><![CDATA[OffBusy:=TRUE;
CASE OffState OF
	0:
		IF NOT PhaseShifterLin_MC_Power.Status THEN	(*¶¼Ã»ÉÏµç*)
			OffState:=88;
		ELSE
			OffState:=1;
		END_IF
	1:
		PhaseShifterLin_MC_Power.Enable:=FALSE;
		A_PowerMC();
		OffState:=2;
	2:
		IF NOT PhaseShifterLin_MC_Power.Status THEN	(*¶¼Ã»ÉÏµç*)
			OffState:=88;
		ELSE
			ErrorId:=11;
			OffState:=-100;
		END_IF
	88:
		Off:=FALSE;
		OffState:=0;
		OffBusy:=FALSE;
		OnStatus:=FALSE;
		OffStatus:=TRUE;
		Error:=FALSE;
		ErrorID:=0;
	-100:
		FB_PlcEmergencyStop();
		Off:=FALSE;
		OffState:=-100;
		OffBusy:=FALSE;
		OffStatus:=FALSE;
		Error:=TRUE;

END_CASE]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_PowerOn" Id="{46ba4774-a9a2-4a51-9400-f8277a7731df}">
      <Implementation>
        <ST><![CDATA[OnBusy:=TRUE;
fb_ton(PT:=t#0.5s);
CASE OnState OF
	0:	(*Check*)
		A_PowerMC();
		IF PhaseShifterLin_MC_Power.Error OR NOT PhaseShifterLin_MC_Power.Active THEN		(*FB Error*)
			ErrorID:=1;
			OnState:=99;
		ELSIF PhaseShifterLin_MC_Power.Status THEN		(*ÖáÒÑ¾­¶¼PowerOn£¬²»·ûºÏ¹¦ÄÜ¿éµ÷ÓÃÌõ¼þ*)
			ErrorID:=2;
			OnState:=-100;
		ELSIF NOT PhaseShifterLin_MC_Power.Status THEN		(*Öá¶¼Ã»ÓÐPower£¬×ªÏÂÒ»²½*)
			OnState:=1;
		ELSE
			ErrorID:=3;
			OnState:=-100;
		END_IF
	1:	(*Execute*)
		IF NOT PhaseShifterLin_MC_Power.Status THEN		(*ÔÙ¼ì²é£¬Öá¶¼Ã»ÓÐPower*)
			PhaseShifterLin_MC_Power.Enable:=TRUE;
			A_PowerMC();
			fb_ton.IN:=TRUE;
			OnState:=2;
		ELSE
			ErrorID:=4;
			OnState:=-100;
		END_IF
	2:	(*Wait*)
		A_PowerMC();
		IF NOT PhaseShifterLin_MC_Power.Status THEN		(*Power StatusÐÅºÅ²»µ½£¬¼ÌÐøµÈ´ý£¬Èç¹û³¬Ê±ÔòFB Error*)
			IF NOT fb_ton.Q THEN
				OnState:=2;
			ELSE
				ErrorID:=8;
				OnState:=99;
			END_IF
		ELSIF  PhaseShifterLin_MC_Power.Status THEN			(*ÕýÈ·µç»úÉÏµã×´Ì¬£¬×ªÏÂÒ»²½*)
				OnState:=88;
		ELSE
				ErrorID:=9;
				OnState:=-100;
		END_IF
	88:
		On:=FALSE;
		OnState:=0;
		OnBusy:=FALSE;
		OnStatus:=TRUE;
		OffStatus:=FALSE;
		Error:=FALSE;
		ErrorID:=0;
		fb_ton.IN:=FALSE;
	99:
		On:=FALSE;
		OnState:=99;
		OnBusy:=FALSE;
		OnStatus:=FALSE;
		Error:=TRUE;
		PhaseShifterLin_MC_Power.Enable:=FALSE;
		fb_ton.IN:=FALSE;
	-100:
		FB_PlcEmergencyStop();
		On:=FALSE;
		OnState:=-100;
		OnBusy:=FALSE;
		OnStatus:=FALSE;
		Error:=TRUE;
		PhaseShifterLin_MC_Power.Enable:=FALSE;
		fb_ton.IN:=FALSE;

END_CASE]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="FB_Power">
      <LineId Id="34" Count="10" />
    </LineIds>
    <LineIds Name="FB_Power.A_CheckPowerStatus">
      <LineId Id="0" Count="1" />
      <LineId Id="3" Count="1" />
      <LineId Id="6" Count="6" />
    </LineIds>
    <LineIds Name="FB_Power.A_PowerOff">
      <LineId Id="15" Count="3" />
      <LineId Id="20" Count="5" />
      <LineId Id="29" Count="3" />
      <LineId Id="34" Count="21" />
    </LineIds>
    <LineIds Name="FB_Power.A_PowerOn">
      <LineId Id="0" Count="5" />
      <LineId Id="9" Count="2" />
      <LineId Id="13" Count="2" />
      <LineId Id="17" Count="6" />
      <LineId Id="25" Count="0" />
      <LineId Id="29" Count="9" />
      <LineId Id="40" Count="6" />
      <LineId Id="48" Count="20" />
      <LineId Id="72" Count="7" />
      <LineId Id="83" Count="3" />
    </LineIds>
  </POU>
</TcPlcObject>